--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
     const SEG = 360 / 37;
     
     // Carrega configurações salvas do localStorage
-    let WS_URL = localStorage.getItem('wsUrl') || "ws://ws-gw-qxtrdq.ekvjny.bra-s1.cloudhub.io/ws";
+    let WS_URL = localStorage.getItem('wsUrl') || "wss://ws-gw-qxtrdq.ekvjny.bra-s1.cloudhub.io/ws";
     let API_URL = localStorage.getItem('apiUrl') || "http://ws-gw-qxtrdq.ekvjny.bra-s1.cloudhub.io/api";
     
     // Gera lista de avatares dinamicamente (1-35)
